--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "onfido-sdk-ui": "^14.44.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^6.22.0",
     "stripe": "^13.11.0",
     "zod": "^3.22.4"
