--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ CHECKOUT_SECRET_KEY=sk_sbox_your_checkout_key
 # Airtel Money
 AIRTEL_CLIENT_ID=your-airtel-client-id
 AIRTEL_CLIENT_SECRET=your-airtel-client-secret
+
+# Binance API
+VITE_BINANCE_API_KEY=your-binance-api-key
+VITE_BINANCE_API_SECRET=your-binance-api-secret
